--- a/style.css
+++ b/style.css
@@ -1,3 +1,110 @@
 body{
-    background-color:brown;
+    background-color: moccasin;
+    margin:0px;
+}
+
+/*Section header*/
+header > section{
+    background-image: url("./src/images/havane.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:100%;
+    height:100%;
+    padding-bottom: 373px;
+}
+
+#logo{
+    width:230px;
+    height:230px;
+    margin-left:43%;
+    margin-top: 4%;
+}
+
+section > article > h1 {
+    font-family: 'Crimson Text', serif;
+    font-size:50px;
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom:0px;
+}
+
+/*Section qui-sommes-nous*/
+.qui-sommes-nous {
+    width:auto;
+    height:200px;
+}
+
+.qui-sommes-nous > article > p {
+    text-align: center;
+}
+
+/*Section membre*/
+.membre {
+    margin-right: 0px;
+}
+
+section > a:link {
+    color: royalblue;
+}
+
+section > a:visited {
+    /*color: moccasin;*/
+    color: rgb(55, 123, 201);
+}
+
+section > a:hover {
+    color:moccasin;
+}
+
+section > a > article > h2 {
+    font-family: 'Crimson Text', serif;
+    font-size:55px;
+    font-style: bold;
+    font-stretch: ultra-condensed;
+    text-decoration: underline overline;
+    
+    text-align: center;
+    padding-top:20%;
+}
+
+section > a > .membre-gauche {
+    background-image: url("./src/images/vignette-gauche.jpg");
+    background-repeat: no-repeat;
+    width:50%;
+    height:475px;
+    opacity: 0.6;
+    float:left;
+    background-size: cover;
+    margin-bottom:2%;
+}
+
+section > a > .membre-gauche:hover {
+    opacity: 1.0;
+}
+
+
+section > a > .membre-droite {
+    background-image: url("./src/images/vignette-droit.jpg");
+    /*background-repeat: no-repeat;*/
+    width:50%;
+    height:475px;
+    opacity: 0.6;
+    float:right;
+    margin-bottom:2%;
+}
+
+section > a > .membre-droite:hover {
+    opacity: 1.0;
+}
+
+/*Section formulaire*/
+.formulaire-contact > h1 {
+    margin-top:10px;
+    margin-bottom:10px;
+    width:100%;
+}
+
+.formulaire-contact > form {
+    margin-left: 42%;
+    margin-bottom:2%
 }
